CHANGES in `usl' VERSION 1.3.0 (2014-xx-xx)

* The estimation of standard errors for the coefficients has been rewritten.
  Bootstrapping is no longer used for the calculation. Therefore the argument
  `R' for the `usl()' function and the argument `type' for the `confint()'
  function have been deprecated. The arguments will be removed in the next
  release. 

* Added coefficient standard errors and residual standard error to the summary
  output.

* Added implementation for the df.residual() function to get the degrees of
  freedom for the model.

* Removed misleading calculation of deviance.

* Used roxygen2 4.0.1 to generate the documentation.


CHANGES in `usl' VERSION 1.2.2 (2014-04-03)

* Use roxygen2 3.1 to generate documentation.

* Fix handling of unsorted input data frame for method="default".


CHANGES in `usl' VERSION 1.2.1 (2013-08-12)

* Adapt to `nlmrt' version 2013-8.10


CHANGES in `usl' VERSION 1.2.0 (2013-04-29)

* Added function `confint()' to estimate parameter confidence intervals.


CHANGES in `usl' VERSION 1.1.0 (2013-02-26)

* Added a package vignette.

* Use `Import' instead of `Depend' for the used packages.

* Function `efficiency()' now returns a named vector. The names are the
  values of the independent variable, cf. `fitted()' or `residuals()'.


CHANGES in `usl' VERSION 1.0.0 (2013-02-10)

* Initial release on CRAN