@@ -16,6 +16,8 @@ CHANGES in `usl' VERSION 1.3.0 (2014-xx-xx)
 
 * Used roxygen2 4.0.1 to generate the documentation.
 
+* Added a new demo data set `oracledb'.
+
 
 CHANGES in `usl' VERSION 1.2.2 (2014-04-03)
 
